syntax = "proto3";

package aliothcontroller;

option java_package = "com.futurewei.alioth.controller.schema";
option java_outer_classname = "Vpc";

import "common.proto";

message VpcConfiguration {
  string project_id = 1;
  string id  = 2;
  string name = 3;
  string cidr = 4;
  
  message SubnetId {
    string id = 1;
  }

  message Route {
    string destination = 1;
    string next_hop = 2;
  }

  message TransitRouterIp {
    string vpc_id = 1;
    string ip_address = 2;
  }

  repeated SubnetId subnet_ids = 5;
  repeated Route routes = 6;
  repeated TransitRouterIp transit_router_ips = 7;
}

message VpcState {
  OperationType operation_type = 1;
  VpcConfiguration configuration =  2;
}
